<resources>
    <string name="app_name">O2O Customer</string>

    <string name="timed_out">Время запроса истекло.</string>
    <string name="network_connection_lost">Прервано соединение с интернетом.</string>
    <string name="bad_server_response">Неверный ответ от сервера.</string>
    <string name="server_error">Непредвиденная ошибка на сервере.</string>
    <string name="try_again">Пожалуйста, попробуйте еще раз.</string>
    <string name="bad_connection">Не получилось загрузить изображение. Проверьте интернет соеденение</string>
    <string name="empty_fields">Обязательные поля не зполнены</string>
    <string name="unknown_error">Произошла неизвестная ошибка.</string>
    <string name="unknown_error_from_backend">Произошла ошибка на сервере. Пожалуйста, обновите приложение</string>

    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="jule">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>

    <string name="birth_date">Дата рождения</string>
    <string name="sex">Пол</string>
    <string name="not_confirmed">(не подтверждена)</string>
    <string name="send">Отправить</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="not_given">Не задан</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>

    <string name="time_remain">%1$s д. %2$s:%3$s:%4$s</string>
    <string name="short_time_remain">%1$s:%2$s</string>
    <string name="short_date_remain">%1$s д. %2$s ч.</string>
    <string name="time_hms_remain">%1$s:%2$s:%3$s</string>

    <string name="phone">телефон</string>
    <string name="phoneMask">+7()</string>
    <string name="login">ПОЛУЧИТЬ КОД</string>
    <string name="next">далее</string>
    <string name="makePhoto">Сделать фото</string>
    <string name="message">Message is cool</string>
    <string name="turn_off_flashlight">Turn_off_flashlight</string>
    <string name="turn_on_flashlight">turn_on_flashlight</string>

    <string name="default_network_error_message">Отсутствует соединение с интернетом.</string>
    <string name="default_unexpected_error_message">Неизвестная ошибка на сервере.</string>
    <string name="default_error_message">Ошибка cоединения с сервером.</string>

    <string name="invalid_phone_number">Неверный номер телефона!</string>
    <string name="quota_exceeded">Превышена квота.</string>

    <string name="cancel">Отмена</string>
    <string name="choose">Выбрать</string>
    <string name="load_photo">Загрузить фото</string>
    <string name="user_not_found">Пользователь не найден!</string>

    <string name="notifications_admin_channel_name">notifications_admin_channel_name</string>
    <string name="notifications_admin_channel_description">notifications_admin_channel_description</string>
    <string name="greetings">ДОБРО\nПОЖАЛОВАТЬ!</string>
    <string name="wait_for_sms">дождитесь смс подтверждения</string>
    <string name="phone_number_checking">идет проверка номера</string>
    <string name="password_sent">Код отправлен на указанный номер телефона</string>
    <string name="enter_sms_code">Введите код из СМС</string>
    <string name="repeat_send_sms">Отправить код повторно через: %1$s сек.</string>
    <string name="scan_message">Наведите на штрих-код для сканирования</string>
    <string name="storeHeader">регистрация торговой точки</string>
    <string name="storeTitleHint">Название магазина</string>
    <string name="storeLegalTitleHint">Юр. название</string>
    <string name="storeAddressHint">Адрес</string>
    <string name="mappingText">Или указать на карте</string>
    <string name="onlineBookingText">Принятие онлайн заказов</string>
    <string name="doneText">Готово</string>
    <string name="addText">Добавить</string>
    <string name="action_search">Search</string>
    <string name="action_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Название магазина</string>
    <string name="toolbarTitleMap">Выберите торгоую точку для регитсрации</string>
    <string name="google_maps_api_key">AIzaSyDiW7UDLjXAqKeo8vRJYQ0ZC5nNVOuOAT0</string>
    <string name="action_delete">Удалить</string>
    <string name="confirm_title">Подтверждение</string>
    <string name="confirm_message">Вы действительно хотите удалить эту фотографию? Отменить это действие будет невозможно.</string>
    <string name="empty_text_rule">Обязательно к заполнению</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="toolbarTitleMain">ПРОДУКТЫ</string>
    <string name="customsText">Онлайн заказы</string>
    <string name="register_product_title">ДОБАВЛЕНИЕ ПРОДУКТА</string>
    <string name="error">erroe</string>
    <string name="productCategoryHint">Категория</string>
    <string name="productProducerHint">Производитель</string>
    <string name="productNameHint">Название</string>
    <string name="productBarcodeHint">Штрих-код</string>
    <string name="productDescribeHint">Описание</string>
    <string name="productChangePhotoText"><u>Изменить</u></string>
    <string name="titleRegisterProduct">ДОБАВЛЕНИЕ ПРОДУКТА</string>
    <string name="toolbarCustoms">ОНЛАЙН ЗАКАЗЫ</string>
    <string name="loading_tv">идет проверка введеных вами данных</string>
    <string name="exists_tv">Данный продукт уже есть в базе</string>
    <string name="productCostHint">Ценна</string>
    <string name="add_parameter">Добавить параметр</string>
    <string name="action_add_product">Добавить продукт</string>
    <string name="block_firebase">Запросы с этого устройства заблокированы из-за необычной активности. Попробуйте позже.</string>
</resources>
