<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>

        <variable name="productRegisterViewModel" type="dragau.o2o.customer.api.requests.ProductRegisterViewModel"/>
        <variable name="presenter" type="dragau.o2o.customer.presentation.presenter.product.ProductRegisterPresenter"/>
    </data>



        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

<!--            tools:context=".ui.fragment.product.ProductRegisterFragment"-->

<!--            android:id="@+id/flMain"-->
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    >

                <TextView
                        android:id="@+id/titleTv"
                        android:textColor="@color/btnDarkGreen"
                        android:text="@string/register_product_title"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginTop="12dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                <com.tiper.MaterialSpinner
                        android:id="@+id/productCategoryMs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="34dp"
                        app:selectedValue="@={productRegisterViewModel.categoryName}"
                        android:layout_marginStart="17dp"
                        android:layout_marginEnd="17dp"
                        android:hint="@string/productCategoryHint"
                        android:prompt="@string/app_name"
                        android:focusableInTouchMode="false"
                        android:textColorHint="@color/hintTextColor"
                        android:enabled="@{productRegisterViewModel.isEnable}"
                        app:srcCompat="@drawable/ic_selector_drawable"
                        app:layout_constraintTop_toBottomOf="@+id/titleTv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />
<!--                        tools:ignore="UnusedAttribute"-->
<!--                        android:focusable="false"-->

<!--                <com.jaredrummler.materialspinner.MaterialSpinner-->
<!--                        android:id="@+id/productCategoryMs"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="34dp"-->
<!--                        android:layout_marginStart="17dp"-->
<!--                        android:layout_marginEnd="17dp"-->
<!--                        android:hint="@string/productCategoryHint"-->
<!--                        android:prompt="@string/app_name"-->
<!--                        android:textColorHint="@color/hintTextColor"-->
<!--                        android:textColor="@color/whiteColor"-->
<!--                        android:enabled="@{productRegisterViewModel.isEnable}"-->
<!--                        android:focusable="true"-->
<!--                        app:srcCompat="@drawable/ic_selector_drawable"-->
<!--                        app:layout_constraintTop_toBottomOf="@+id/titleTv"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:selectedValue="@={productRegisterViewModel.categoryName}"-->
<!--                        tools:ignore="UnusedAttribute"-->
<!--                        />-->

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/productProducerTi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_marginStart="17dp"
                        android:layout_marginEnd="17dp"
                        android:layout_marginTop="9dp"
                        android:textColorHint="@color/hintTextColor"
                        app:layout_constraintTop_toBottomOf="@+id/productCategoryMs"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        >

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:hint="@string/productProducerHint"
                            android:focusable="true"
                            android:text="@={productRegisterViewModel.produserName}"
                            />
<!--                            android:enabled="@{productRegisterViewModel.isEnable}"-->
<!--                            android:text="@={registerStoreViewModel.name}"-->

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/productNameTi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_marginStart="17dp"
                        android:layout_marginEnd="17dp"
                        android:layout_marginTop="9dp"
                        android:textColorHint="@color/hintTextColor"
                        app:layout_constraintTop_toBottomOf="@+id/productProducerTi"
                        >

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/productNameHint"
                            android:focusable="true"
                            android:enabled="@{productRegisterViewModel.isEnable}"
                            android:text="@={productRegisterViewModel.title}"
                            />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/productBarcodeTi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_marginStart="17dp"
                        android:layout_marginEnd="17dp"
                        android:layout_marginTop="9dp"
                        android:textColorHint="@color/hintTextColor"
                        app:layout_constraintTop_toBottomOf="@+id/productNameTi"
                        >

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/productBarcodeHint"
                            android:enabled="false"
                            android:focusable="false"
                            android:text="@={productRegisterViewModel.barCode}"
                            />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/productDescribeTi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:layout_marginEnd="17dp"
                        android:layout_marginTop="9dp"
                        android:textColorHint="@color/hintTextColor"
                        app:layout_constraintTop_toBottomOf="@+id/productBarcodeTi"
                        >

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/productDescribeHint"
                            android:enabled="@{productRegisterViewModel.isEnable}"
                            android:text="@={productRegisterViewModel.describe}"
                            android:focusable="true"
                            />

                </com.google.android.material.textfield.TextInputLayout>

                  <ImageView
                        android:id="@+id/avaIv"
                        android:layout_width="match_parent"
                        android:layout_height="109dp"
                        android:layout_gravity="end|center"
                        android:background="#979797"
                        android:scaleType="center"
                        android:clickable="@{!productRegisterViewModel.visiblePhoto}"
                        android:focusable="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="15dp"
                        android:onClick="@{(v) -> presenter.makePhoto()}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/productDescribeTi"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:setImageUri="@{productRegisterViewModel.imageUri}"
                        app:layout_constraintBottom_toTopOf="@+id/changeTv"
                        />

                <ImageView
                        android:id="@+id/addPhotoIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="29dp"
                        android:clickable="false"
                        android:visibility="@{productRegisterViewModel.visiblePhoto? View.GONE: View.VISIBLE}"
                        app:layout_constraintEnd_toEndOf="@+id/avaIv"
                        app:layout_constraintStart_toStartOf="@+id/avaIv"
                        app:layout_constraintTop_toTopOf="@+id/avaIv"
                        app:srcCompat="@drawable/ic_store_photo"
                        />
                <TextView
                        android:id="@+id/addPhotoTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Добавить фото"
                        android:clickable="false"
                        android:textColor="@color/whiteColor"
                        android:visibility="@{productRegisterViewModel.visiblePhoto? View.GONE: View.VISIBLE}"
                        app:layout_constraintStart_toStartOf="@+id/avaIv"
                        app:layout_constraintEnd_toEndOf="@+id/avaIv"
                        app:layout_constraintTop_toBottomOf="@+id/addPhotoIcon"
                        />

                <TextView
                        android:id="@+id/changeTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:textColor="#007AFF"
                        android:text="@string/productChangePhotoText"
                        android:textAlignment="center"
                        android:visibility="@{productRegisterViewModel.visiblePhoto? View.VISIBLE: View.GONE}"
                        android:onClick="@{(v) -> presenter.makePhoto()}"
                        app:layout_constraintTop_toBottomOf="@+id/avaIv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/finishButton"
                        />


<!--        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"-->
<!--                android:id="@+id/makePhotoBtn"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                android:text="@string/makePhoto"-->
<!--                android:onClick="@{(v) -> presenter.makePhoto()}"-->
<!--        />-->

                <Button
                        android:id="@+id/finishButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addText"
                        android:background="@drawable/button_green_bg"
                        android:layout_marginTop="23dp"
                        android:layout_marginStart="86dp"
                        android:layout_marginEnd="86dp"
                        android:layout_marginBottom="52dp"
                        app:layout_constraintTop_toBottomOf="@+id/changeTv"
                        android:onClick="@{(v) -> presenter.registerStore()}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

</layout>