<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <!--variable name="loginViewModel" type="kz.dragau.larek.api.requests.LoginRequestModel"/-->
    <variable name="presenter" type="dragau.o2o.customer.presentation.presenter.login.SmsCodePresenter"/>
</data>

<LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  tools:context=".ui.fragment.login.SmsCodeFragment"
                  android:id="@+id/flMain"
                  android:orientation="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
            android:id="@+id/phoneLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="37dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="37dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/avatar_imageView">

        <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:typeface="monospace"
                app:allowed_chars="1234567890"
                app:mask="+7(###)###-##-##"
                android:hint="1234567890"
                android:textSize="14sp"
                app:keep_hint="true"
                android:focusable="false"
                android:textColorHint="#000000"
                android:drawableStart="@drawable/phone"
        />

        <TextView
                android:id="@+id/passwordSentTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_sent"
                android:textSize="12sp"
                android:layout_marginStart="2dp"
        />

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/smsEt"
                  android:hint="@string/enter_sms_code"
                  android:inputType="number"
                  android:paddingLeft="6dp"
                  android:layout_marginTop="26dp"
                  android:textSize="14sp"
                  android:textColor="#909090"
                  android:drawableStart="@drawable/ic_sms"
        />

        <TextView
                android:id="@+id/repeatSmsTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_send_sms"
                android:textSize="12sp"
                android:layout_marginTop="26dp"
                android:layout_marginStart="2dp"
                android:textAlignment="center"
                android:textColor="#D6D6D6"
        />

        <!--<br.com.sapereaude.maskedEditText.MaskedEditText-->
                <!--android:id="@+id/smsEt"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="phone"-->
                <!--android:typeface="monospace"-->
                <!--app:allowed_chars="1234567890"-->
                <!--app:mask="+7(###)###-##-##"-->
                <!--android:hint="1234567890"-->
                <!--android:paddingLeft="0dp"-->
                <!--android:textSize="14sp"-->
                <!--app:keep_hint="true"-->
                <!--android:textColorHint="#000000"-->
                <!--android:drawableStart="@drawable/ic_sms"-->
        <!--/>-->
    </LinearLayout>
    <com.caverock.androidsvg.SVGImageView
            android:id="@+id/avatar_imageView"
            android:layout_width="40dp"
            android:layout_height="26dp"
            android:layout_marginTop="42dp"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:svg="logo.svg"
            android:scaleType="fitCenter"/>


    <Button
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/button_green_bg"
            android:onClick="@{(v) -> presenter.validateCode()}"
            android:layout_marginBottom="52dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"/>

    <!--<Button-->
            <!--android:text="@string/next"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:id="@+id/btnLogin"-->
            <!--android:layout_marginTop="14dp"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/phoneLayout"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--android:layout_marginLeft="48dp"-->
            <!--android:layout_marginStart="48dp"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--android:layout_marginEnd="48dp"-->
            <!--android:layout_marginRight="48dp"-->
            <!--android:padding="5dp"-->
            <!--android:onClick="@{(v) -> presenter.validateCode()}"-->
    <!--/>-->

</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
</layout>