<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>

        <variable name="loginViewModel" type="dragau.o2o.customer.api.requests.LoginRequestModel"/>
        <variable name="presenter" type="dragau.o2o.customer.presentation.presenter.login.PhoneNumberPresenter"/>
    </data>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.login.PhoneNumberFragment"
            android:id="@+id/flMain"
            android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >
            <TextView
                    android:text="@string/greetings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtGreetings"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="30dp"
                    android:textSize="24sp"
                    />
<!--                    style="@style/TextView.HeaderInverseColor"-->

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/phoneLayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="37dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toTopOf="@id/btnLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="37dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@id/txtGreetings">

                <br.com.sapereaude.maskedEditText.MaskedEditText
                        android:id="@+id/phoneEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:inputType="phone"
                        android:typeface="monospace"
                        app:allowed_chars="1234567890"
                        app:mask="+7 (###) ### ## ##"
                        android:hint="1234567890"
                        android:textSize="14sp"
                        app:keep_hint="true"
                        android:drawableStart="@drawable/phone"
                        android:text="@={loginViewModel.mobilePhone}"
                        app:onEditorEnterAction="@{presenter.startCheck}"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                />

                <TextView
                        android:id="@+id/passwordSentTv"
                        android:alpha="0"
                        app:visibilityFade="@{presenter.isSmsSent}"
                        app:layout_constraintTop_toBottomOf="@id/phoneEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_sent"
                        style="@style/Widget.TextView.Hint"
                        android:layout_marginStart="2dp"
                />

                <LinearLayout
                        android:id="@+id/ltSmsCode"
                        app:layout_constraintTop_toBottomOf="@id/passwordSentTv"
                        android:alpha="0"
                        app:visibleTransition="@{presenter.isSmsSent}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <EditText
                            android:id="@+id/smsEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_sms_code"
                            android:inputType="numberPassword"
                            android:ems="6"
                            android:paddingStart="6dp"
                            android:layout_marginTop="26dp"
                            android:maxLength="6"
                            android:drawableStart="@drawable/ic_sms"
                            android:text="@={loginViewModel.smsCode}"
                            app:onEditorEnterAction="@{presenter.startCheck}"
                            android:imeOptions="actionDone"
                            android:singleLine="true"
                    />

                    <TextView
                            android:id="@+id/repeatSmsTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:secDiff="@{loginViewModel.codeExpiryDate}"
                            android:textSize="14sp"
                            android:layout_marginTop="26dp"
                            android:layout_marginStart="2dp"
                            android:textAlignment="center"
                            style="@style/Widget.TextView.Hint"
                    />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                    android:text="@string/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/button_green_bg"
                    android:onClick="@{(v) -> presenter.getSmsCode()}"
                    android:layout_marginBottom="52dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>